# TV-Safety-Cleaner

./: README.md  tv.sh
tv-controller/: CHANGELOG.md  CONTRIBUTING.md  README.md  config.example.toml  pyproject.toml  requirements-dev.txt
tv-controller/docs/: ARCHITECTURE.md  DEVICE_PROFILE_GUIDE.md  PRIVACY.md  RECOVERY.md  SECURITY.md  SNAPSHOT_FORMAT.md  THREAT_MODEL.md
tv-controller/scripts/: doctor.sh  install-raspberry.sh  rebuild-raspberry.sh  uninstall-raspberry.sh
tv-controller/src/tv_controller/: __init__.py  apk.py  apk_cli.py  apk_manager.py  cli.py  config.py  planner.py  profile.py  service.py  snapshot.py  state_history.py  transactions.py  wsgi.py
tv-controller/src/tv_controller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tv-controller/systemd/: tv-controller.service
tv-controller/tests/: test_apk.py  test_apk_manager.py  test_controller_smoke.py  test_controller_snapshot.py  test_controller_web.py  test_planner.py  test_state_history.py  test_transactions.py
tv-observer/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.toml  pyproject.toml
tv-observer/docs/: ARCHITECTURE.md  DEVICE_PROFILE_GUIDE.md  FACTORY_RESET_DRILL.md  PRIVACY.md  RECOVERY.md  SECURITY.md  SNAPSHOT_FORMAT.md  THREAT_MODEL.md  snapshot-schema.json
tv-observer/scripts/: doctor.sh  install-raspberry.sh  rebuild-raspberry.sh  uninstall-raspberry.sh
tv-observer/src/tv_observer/: __init__.py  adb.py  cli.py  collector.py  config.py  observation.py  platform.py  recovery.py  (+4 more)
tv-observer/src/tv_observer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tv-observer/systemd/: tv-observer.service
tv-observer/tests/: test_adb.py  test_collector.py  test_observation.py  test_observer_smoke.py  test_platform.py  test_root_deployment.py  test_snapshot.py  test_utilities.py  test_web.py
tv-shared/: pyproject.toml
(+25 files in other folders)
