[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tv-controller"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["Flask>=2.3,<4", "gunicorn>=21,<24", "tv-safety-shared==0.1.0"]

[project.scripts]
tv-controller = "tv_controller.cli:main"
tv-apk = "tv_controller.apk_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../tv-shared/src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "../tv-shared/src"
