[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tv-safety-shared"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["Flask>=2.3,<4"]

[tool.setuptools.package-data]
tv_safety_shared = ["templates/*.html", "static/*.css", "static/*.js", "py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
